# model-server

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENCE  README.md  Spacefile  app.py  mypy.ini  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: action.yml  docker.yml
artifacts/: rate_venues.pickle
cache/: create_redis_table.py
mlflow/: Dockerfile  build_mlflow_image.sh
model_server/: __init__.py  __main__.py  features.py  inference_server.py  model.py  ratings.py  server.py
notebooks/: create_and_register_ipykernel.sh
recommendation_model_server/: __main__.py  features.py
redis/: Dockerfile  dump.rdb
scripts/: run_elastic_locally.sh  run_kibana_locally.sh  run_mlflow_registry.sh  run_redis_cache.sh  start_inference_service.sh  test_docker_image.sh
src/model_server/: __main__.py  inference_server.py  model.py  ratings.py  server.py
src/recommendation_model_server/: __init__.py  __main__.py  indexer.py  inference_server.py  model.py  recommendation_api.py  restaurant.py  search.py  server.py  transformations.py  utils.py
src/recommendation_model_server/endpoints/: __init__.py  autocomplete.py  index.py  predict.py  search.py
templates/: base.html  index.html  search_box.html
tests/: conftest.py  test_inference.py  test_inference_request_time.py  test_inference_server.py  test_invokust_load.py  test_model.py  test_prediction_endpoint.py  test_response_time.py  test_server.py
