[tool.poetry]
name = "recommendation-model-server"
version = "0.1.1"
description = "A real-time inference server"
authors = ["Rauan Akylzhanov <akylzhanov.r@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"

polars = "^0.16.6"
pandas = "^1.5.3"
pyarrow = "^11.0.0"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
httpx = "^0.23.3"
fastapi-utils = "^0.2.1"
joblib = "^1.2.0"
lightgbm = "^3.3.5"
types-requests = "^2.28.11.14"
twine = "^4.0.2"
pydantic = "^1.10.5"
invokust = "^0.77"
elasticsearch = "7.13.3"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
types-redis = "^4.5.2.0"


[tool.poetry.dev-dependencies]
pyupgrade = "^3.3.1"
coverage = "^7.1.0"
pre-commit = "^3.0.4"
autoflake = "^2.0.1"
mypy = "^1.0.1"
vulture = ">=1.0"
bandit = ">=1.6"
safety = ">=1.8"
isort = ">=5.3"
flake8-bugbear = ">=19.8"
black = { version = ">=18.3-alpha.0", allow-prereleases = true }
pytest = ">=5.0"
pytest-cov = ">=2.7"
pytest-mock = ">=1.10"
pep8-naming = ">=0.8.2"
cruft = ">=2.2"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.0.0"
deptry = "^0.8.0"


[[tool.poetry.source]]
name = "ra312"
url = "https://pypi.org/ra312"
default = false
secondary = false

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "hug"
